star_ecommerce/web-tinhocngoisao/wp-content/plugins/woocommerce-sale-date/widget/homepage-widget/assets/private/scss/client_style.scss
#dv-primetime-price {
    margin-top: 10px;
    margin-bottom: 10px;
    padding: 3px;
    background-color: #d42333;
    border-radius: 3px;
    overflow: hidden;

    .main-header {
        display: flex;
        color: white;
        justify-content: space-between;
        align-items: center;
        .header-title {
            width: 25%;
            h2 {
                margin: 0;
                padding: 0;
                text-transform: uppercase;
                font-weight: bold;
            }
        }
        .block-time-down {
            width: 15%;
            position: relative;
            height: 50px;
            display: flex;
            align-items: center;
            span {
                position: absolute;
                width: 30px;
                height: 30px;
                border: 1px solid white;
                background-color: red;
                border-radius: 3px;
                font-weight: 700;
                top: 10x;
                text-align: center;
                font-size: 20px;
                line-height: 25px;
                &.minutes {
                    left: 40px;
                }
                &.seconds {
                    left: 80px;
                }
            }
        }
        .block-time-items {
            width: 60%;
            display: flex;
            .block-time-item {
                height: 50px;
                display: flex;
                flex-direction: column;
                justify-content: flex-end;
                align-items: center;
                width: 25%;
                border-right: 1px solid white;
                color: #f27982;
                cursor: pointer;
                &:nth-last-child(1) {
                    border-right: none;
                }
                &.active {
                    background: white;
                    .time {
                        color: red;
                    }
                    .active-time {
                        color: black;
                    }
                }
                .time {
                    font-size: 18px;
                    font-weight: 700;
                }
            }
        }
    }

    .main-body {
        height: 500px;
        background-color: white;
        .header-categories {
            height: 45px;
            display: flex;
            align-items: center;
            .category-item {
                span {
                    padding: 10px;
                    background-color: #c0c0c042;
                    border-radius: 3px;
                    margin: 0 10px;
                    cursor: pointer;
                }
            }
        }
        .woocommerce.column.custom-primetime-sale {
            margin-left: 0;
            margin-right: 0;

            .slick-arrow {
                border: 2px solid lightgray;
                border-radius: 50%;
                color: #aaa;
                cursor: pointer;
                display: none !important;
                font-size: 20px;
                font-weight: bold;
                position: absolute;
                padding: 6px 10px;
                top: 48%;
                z-index: 999;


                &.slick-next {
                    right: 0;
                }

                &.slick-prev {
                    left: 0;
                }

                &:hover {
                    background-color: #d42333;
                    color: #fff;
                }
            }

            .slick-track {
                margin: 0;
            }

            .acme-col-4 {
                width: 100% !important;
            }

            &:hover {
                .slick-arrow {
                    display: block !important;
                }
            }
        }
    }
}

